--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,14 +4,14 @@ build:
   verbosity: minimal
 deploy:
   release: MossApp-v$(appveyor_build_version)
-  description: 'MossApp $(appveyor_repo_tag_name) has been released.'
+  description: 'MossApp $(appveyor_build_version) has been released.'
   provider: GitHub
   auth_token:
     secure: s1IEmaaYPxsqkxivyhxf/ysmYQGg+JL3iBqzjeHwa06txM7is/kG5yR8iVZUvkiZ
-  artifact: Debug\MossApp.exe
+  artifact: MossApp\bin\Debug\MossApp.exe
   draft: false
   prerelease: false
-  tag: $(APPVEYOR_REPO_TAG_NAME)
+  tag: $(APPVEYOR_BUILD_VERSION)
   on:
     branch: master                 # release from master branch only
     APPVEYOR_REPO_TAG: true        # deploy on tag push only
