--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,8 @@ artifacts:
   - path: MossApp\bin\Debug\MossApp.exe
     name: MossApp
 deploy:
-  release: MossApp-v$(appveyor_repo_tag_name)
-  description: 'MossApp has been released.'
+  #release: MossApp-$(appveyor_repo_tag_name)
+  description: 'MossApp $(appveyor_repo_tag_name) has been released.'
   provider: GitHub
   auth_token:
     secure: s1IEmaaYPxsqkxivyhxf/ysmYQGg+JL3iBqzjeHwa06txM7is/kG5yR8iVZUvkiZ
